--- a/content/posts/2013-05-02-sunspider-1-0-vs-0-9.md
+++ b/content/posts/2013-05-02-sunspider-1-0-vs-0-9.md
@@ -16,7 +16,7 @@ An improved version of the [SunSpider JavaScript benchmark][1] has been released
 ][2] 
 
 <p style="text-align: center;">
-  <img class="aligncenter size-full wp-image-2551" alt="SunSpider results" src="https://lastzero.net/wp-content/uploads/2013/05/20130502020151.png" width="680" height="500" srcset="https://blog.liquidbytes.net/wp-content/uploads/2013/05/20130502020151.png 680w, https://blog.liquidbytes.net/wp-content/uploads/2013/05/20130502020151-500x367.png 500w" sizes="(max-width: 680px) 100vw, 680px" />
+  <img class="aligncenter size-full wp-image-2551" alt="SunSpider results" src="/wp-content/uploads/2013/05/20130502020151.png" width="680" height="500" srcset="/wp-content/uploads/2013/05/20130502020151.png 680w, /wp-content/uploads/2013/05/20130502020151-500x367.png 500w" sizes="(max-width: 680px) 100vw, 680px" />
 </p>
 
  [1]: http://www.webkit.org/perf/sunspider-1.0/sunspider-1.0/driver.html
