--- a/content/posts/2012-10-16-.md
+++ b/content/posts/2012-10-16-.md
@@ -3,7 +3,7 @@ title: Google Spam – Part 2
 author: Michael Mayer
 type: post
 date: -001-11-30T00:00:00+00:00
-draft: true
+private: true
 url: /?p=958
 categories:
   - Uncategorized
