Fixed existing content

--- a/content/posts/2012-05-08-.md
+++ b/content/posts/2012-05-08-.md
@@ -2,6 +2,7 @@
 title: The two basic challenges of software engineering
 author: Michael Mayer
 type: post
+private: true
 date: -001-11-30T00:00:00+00:00
 draft: true
 url: /?p=1467
