--- a/content/posts/2007-06-02-linux-tag-2007.md
+++ b/content/posts/2007-06-02-linux-tag-2007.md
@@ -3,17 +3,14 @@ title: LinuxTag 2007
 author: Michael Mayer
 type: post
 date: 2007-06-02T15:31:47+00:00
-excerpt: |
-  |
-    [[image blinking_google_toy.jpg align="right"]] I've been on the [http://www.linuxtag.org/2007/ LinuxTag] in Berlin during the past days. It was a fun event and I met lots of nice people - also the recruiting staff of Google, which gave me a nice notepad, some other toys and an invitation for lunch at the headquarters in Mountain View.
 url: /2007/06/linux-tag-2007/
 categories:
   - 'Conferences &amp; Events'
 
 ---
-[<img class="alignright size-full wp-image-766" title="Blinking Google Toy" src="http://www.nulldevice.de/wp-content/uploads/2008/04/blinking_google_toy.jpg" alt="" width="250" height="130" />][1]I&#8217;ve been on the [LinuxTag][2] in Berlin during the past days. It was a fun event and I met lots of nice people &#8211; also the recruiting staff of Google, which gave me a nice notepad, some other toys and an invitation for lunch at the headquarters in Mountain View.
+I&#8217;ve been on the [LinuxTag][1] in Berlin during the past days. It was a fun event and I met lots of nice people &#8211; also the recruiting staff of Google, which gave me a nice notepad, some other toys and an invitation for lunch at the headquarters in Mountain View.
 
-I&#8217;ve also had quick look into &#8220;Einstieg in SQL&#8221; (&#8220;SQL for beginners&#8221;) of Galileo Press. The cool thing about that book is, that it is supposed to cover all SQL dialects. Of course, the author suggested to use triggers to emulate [MySQL&#8217;s AUTO_INCREMENT][3] in MS SQL. So I told them about the existence of [identities][4] in Transact-SQL &#8211; will be corrected in the next run :)
+I&#8217;ve also had quick look into &#8220;Einstieg in SQL&#8221; (&#8220;SQL for beginners&#8221;) of Galileo Press. The cool thing about that book is, that it is supposed to cover all SQL dialects. Of course, the author suggested to use triggers to emulate [MySQL&#8217;s AUTO_INCREMENT][2] in MS SQL. So I told them about the existence of [identities][3] in Transact-SQL &#8211; will be corrected in the next run :)
 
 The new solaris init system was also looking very promissing. They replaced the old stuff by an XML database and a very good depedency system between the components. That way, they can start many services at once which minimizes the startup time and improves fault tollerance. Nice!
 
@@ -21,10 +18,9 @@ The guys from KDE were surprised that the PHP bindings are not available by defa
 
 I guess there will be some talks about Web 2.0 security now&#8230; so that&#8217;s it for now.
 
-[<img class="aligncenter size-medium wp-image-767" title="Linux Tag 2007 - IBM Stand" src="http://www.nulldevice.de/wp-content/uploads/2008/04/linux_tag.jpg" alt="" width="500" height="332" />][5]
+[<img class="aligncenter size-medium wp-image-767" title="Linux Tag 2007 - IBM Stand" src="/wp-content/uploads/2008/04/linux_tag.jpg" alt="" width="500" height="332" />][4]
 
- [1]: http://www.nulldevice.de/wp-content/uploads/2008/04/blinking_google_toy.jpg
- [2]: http://www.linuxtag.org/2007/
- [3]: http://dev.mysql.com/doc/refman/4.1/en/example-auto-increment.html
- [4]: http://msdn2.microsoft.com/en-us/library/aa933196(SQL.80).aspx
- [5]: http://www.nulldevice.de/wp-content/uploads/2008/04/linux_tag.jpg
+ [1]: http://www.linuxtag.org/2007/
+ [2]: http://dev.mysql.com/doc/refman/4.1/en/example-auto-increment.html
+ [3]: http://msdn2.microsoft.com/en-us/library/aa933196(SQL.80).aspx
+ [4]: https://blog.liquidbytes.net/wp-content/uploads/2008/04/linux_tag.jpg
