--- a/content/posts/2007-06-08-cte-sql.md
+++ b/content/posts/2007-06-08-cte-sql.md
@@ -1,32 +1,8 @@
 ---
-title: Fun with SQL
+title: 'Fun with SQL: Common Table Expressions'
 author: Michael Mayer
 type: post
 date: 2007-06-08T10:02:02+00:00
-excerpt: |
-  |
-    I had heaps of fun with SQL today (again). Ever heard of Common Table Expressions? Here is an example of a recursive query:
-    
-    <code>
-    WITH
-      nodeCTE (nodeId, nodeName)
-    AS (
-      SELECT 
-        a.nodeId, 
-        nodeName = CONVERT(varchar(8000), nodeName) 
-        FROM 
-        nodeNames a JOIN nodes b ON a.nodeId = b.nodeId 
-        AND a.locale = 'en' AND b.parentId = 0 
-      UNION ALL SELECT y.nodeId, 
-        x.nodeName + ' -> ' + CONVERT(varchar(8000),
-        z.nodeName)
-        FROM 
-        nodeCTE x JOIN nodes y ON y.parentId = x.nodeId      
-        JOIN nodeNames z ON z.nodeId = y.nodeId AND 
-        z.locale = 'en'
-    )
-    SELECT * FROM nodeCTE;
-    </code>
 url: /2007/06/cte-sql/
 categories:
   - 'Databases &amp; XML'
@@ -36,7 +12,8 @@ tags:
 ---
 I had heaps of fun with SQL today (again). Ever heard of Common Table Expressions? Here is an example of a recursive query:
 
-<pre>WITH
+{{< highlight sql >}}
+WITH
 nodeCTE (nodeId, nodeName)
 AS (
   SELECT a.nodeId, nodeName = CONVERT(varchar(8000), nodeName)
@@ -47,11 +24,12 @@ AS (
   JOIN nodeNames z ON z.nodeId = y.nodeId AND z.locale = 'en'
 )
 SELECT * FROM nodeCTE;
-</pre>
+{{< / highlight >}}
 
 Another task was to create a database record in the locale &#8216;de&#8217;, if it did not exist yet:
 
-<pre>INSERT INTO users
+{{< highlight sql >}}
+INSERT INTO users
 (userId, locale, title, firstName, lastName, middleName, nobleName, displayName, email)
 SELECT userId, 'de', title, firstName, lastName, middleName, nobleName, displayName, email
 FROM users b
@@ -60,20 +38,22 @@ WHERE locale = 'en' AND NOT EXISTS (
   FROM mdb_users a
   WHERE a.userId = b.userId AND locale = 'de'
 );
-</pre>
+{{< / highlight >}}
 
 Afterwards, it was easy to eliminate all special (German) characters from the original records in the default locale &#8216;en&#8217;.
   
 Did you know that there is a major difference between German and English is the abbreviation for &#8220;Doctor&#8221;, which is &#8220;Dr&#8221; in English and &#8220;Dr.&#8221; in German? That had to be fixed too:
 
-<pre>UPDATE users
+{{< highlight sql >}}
+UPDATE users
 SET title = REPLACE(title, 'Dr.', 'Dr')
 WHERE locale = 'en';
-</pre>
+{{< / highlight >}}
 
 Last query example is a search for name parts and the phone extension. You had to search in all locales of the multi-lingual database, but only return distinct results in the locale &#8216;en&#8217; with Name und Initial:
 
-<pre>SELECT displayName, initial
+{{< highlight sql >}}
+SELECT displayName, initial
 FROM users
 WHERE locale = 'en'
 AND userId IN (
@@ -90,4 +70,4 @@ AND userId IN (
   WHERE adrPhoneExt = '%example%'
 )
 ORDER BY lastName
-</pre>
+{{< / highlight >}}
