--- a/content/posts/2008-09-15-.md
+++ b/content/posts/2008-09-15-.md
@@ -3,7 +3,7 @@ title: Pictures from San Francisco
 author: Michael Mayer
 type: post
 date: -001-11-30T00:00:00+00:00
-draft: true
+private: true
 url: /?p=881
 
 ---
